Implemented the Contracts Pallet

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,6 +20,8 @@ substrate-build-script-utils = '2.0.0'
 
 [dependencies]
 jsonrpc-core = '15.0.0'
+pallet-contracts = '2.0.0'
+pallet-contracts-rpc = '0.8.0'
 structopt = '0.3.8'
 
 # local dependencies
