--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -41,6 +41,7 @@ pallet-contracts-rpc-runtime-api = { version = '0.8.0', default-features = false
 pallet-contracts-primitives = { version = '2.0.0', default_features = false }
 pallet-grandpa = { default-features = false, version = '2.0.0' }
 pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
+pallet-scheduler = { default-features = false, version = '2.0.0' }
 pallet-sudo = { default-features = false, version = '2.0.0' }
 pallet-timestamp = { default-features = false, version = '2.0.0' }
 pallet-transaction-payment = { default-features = false, version = '2.0.0' }
@@ -83,6 +84,7 @@ std = [
     'pallet-contracts-primitives/std',
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
+    'pallet-scheduler/std',
     'pallet-sudo/std',
     'pallet-template/std',
     'pallet-timestamp/std',
