--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -40,6 +40,7 @@ pallet-contracts = { version = '2.0.0', default_features = false }
 pallet-contracts-rpc-runtime-api = { version = '0.8.0', default-features = false }
 pallet-contracts-primitives = { version = '2.0.0', default_features = false }
 pallet-grandpa = { default-features = false, version = '2.0.0' }
+pallet-multisig = { default-features = false, version = '2.0.0' }
 pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
 pallet-scheduler = { default-features = false, version = '2.0.0' }
 pallet-sudo = { default-features = false, version = '2.0.0' }
@@ -83,6 +84,7 @@ std = [
     'pallet-contracts-rpc-runtime-api/std',
     'pallet-contracts-primitives/std',
     'pallet-grandpa/std',
+    'pallet-multisig/std',
     'pallet-randomness-collective-flip/std',
     'pallet-scheduler/std',
     'pallet-sudo/std',
